tests/snapshots/blockflow/header/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - blockflow
    - header
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <BLOCK_HASH>

Usage: kermit blockflow header <BLOCK_HASH>

For more information, try '--help'.
