tests/snapshots/blockflow/header/one_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - blockflow
    - header
    - f344b3dd45f39d62cfd200cfa3312c080018102908787c5565b8c8af3647368f
---
success: true
exit_code: 0
----- stdout -----
{
  "chainFrom": 3,
  "chainTo": 3,
  "deps": [
    "0000000000000000000000000000000000000000000000000000000000000000",
    "0000000000000000000000000000000000000000000000000000000000000000",
    "0000000000000000000000000000000000000000000000000000000000000000",
    "0000000000000000000000000000000000000000000000000000000000000000",
    "0000000000000000000000000000000000000000000000000000000000000000",
    "0000000000000000000000000000000000000000000000000000000000000000",
    "0000000000000000000000000000000000000000000000000000000000000000"
  ],
  "hash": "f344b3dd45f39d62cfd200cfa3312c080018102908787c5565b8c8af3647368f",
  "height": 0,
  "timestamp": 1231006505000
}

----- stderr -----
